--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.dice{
+/* .dice{
     float:left;
     width:50px;
     background:#F5F5F5;
@@ -13,5 +13,23 @@ h2{
     clear:left;
 }
 #style{
+    text-align: center;
+    padding: 0.75rem;
+
+  border-radius: 100px;
+  background-color: rgb(0, 211, 63);
+}
+.card{
+  float: center;
+}
+.row{
+    box-align: 
+} */
+.two{
+    background-color:peru;
+
+}
+
+#header1{
     text-align: center;
 }
