--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,26 @@ h2{
 #header1{
     text-align: center;
 }
+#page1{
+    background-color: mediumturquoise;
+}
+#style{
+    text-align: center;
+    padding: 0.75rem;
+  border-radius: 100px;
+  background-color:mediumspringgreen;
+}
+.card{
+    margin-left: 30%;
+    
+}
+.b1{
+   background-image: url("/home/joy/Desktop/moringa-school-projects/pig-dice/images/unnamed.png");
+}
+#last{
+    background-color:mediumspringgreen; 
+    border-radius: 30px;
+    text-align: center;
+    font-family: sans-serif;
+    height:2px;
+}
