fixed image error

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ h2{
     
 }
 .b1{
-   background-image: url("/home/joy/Desktop/moringa-school-projects/pig-dice/images/unnamed.png");
+   background-image: url("https://github.com/Joy-Vivika/Pig-Dice/blob/gh-pages/images/unnamed.png");
 }
 #last{
     background-color:mediumspringgreen; 
